fix: z-index

--- a/projects/quang/components/shared/option-list/option-list.component.scss
+++ b/projects/quang/components/shared/option-list/option-list.component.scss
@@ -1,5 +1,6 @@
 :host {
   display: block;
+  z-index: 999;
 }
 .option-list {
   --option-list-width: 100%;
